--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^7.1.96",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vuetify": "^3.1.2"
